--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,7 @@ project(":api-internal") {
 	dependencies {
 		implementation project(":api-common")
 		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-		runtimeOnly 'com.oracle.database.jdbc:ojdbc11'
+		runtimeOnly 'com.mysql:mysql-connector-j'
 
 	}
 }
