--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,11 @@ subprojects {
 		compileOnly 'org.projectlombok:lombok'
 		annotationProcessor 'org.projectlombok:lombok'
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	}
+
+	tasks.named('test') {
+		useJUnitPlatform()
 	}
 }
 
